--- a/src/style.css
+++ b/src/style.css
@@ -2,10 +2,17 @@
 
 body {
   background-color: rgb(86, 167, 167);
-  margin-top: 35px;
+  margin-top: 100px;
 }
 
 .button {
-  font-size: 20px;
+  font-size: 35px;
+  font-weight: 900;
   text-align: center;
+}
+
+#excuse {
+  font-size: 40px;
+  padding-bottom: 35px;
+  margin-top: 150px;
 }
